add header and footer

--- a/index.html
+++ b/index.html
@@ -7,5 +7,23 @@
     <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <section class="header__container _container">
+          <h1 class="header__title title">Quiz App</h1>
+        </section>
+      </header>
+
+      <main class="page"></main>
+
+      <footer class="footer">
+        <nav class="nav">
+          <a href="#" class="home">home</a>
+          <a href="#" class="bookmarks">bookmarks</a>
+          <a href="#" class="profile">profile</a>
+        </nav>
+      </footer>
+    </div>
+  </body>
 </html>
