--- a/index.html
+++ b/index.html
@@ -15,13 +15,46 @@
         </section>
       </header>
 
-      <main class="page"></main>
+      <main class="page">
+        <div class="page__container">
+          <section class="page__column">
+            <div class="page__item">
+              <h2 class="page__title title">
+                Lorem ipsum dolor sit amet Lorem ipsum dolor
+              </h2>
+              <button class="page__button button">Show Answer</button>
+              <div class="page__tags tags">
+                <a href="#" class="tags__link">#html</a>
+                <a href="#" class="tags__link">#flexbox</a>
+                <a href="#" class="tags__link">#css</a>
+              </div>
+              <img
+                src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
+                alt=""
+              />
+            </div>
+          </section>
+        </div>
+      </main>
 
       <footer class="footer">
         <nav class="nav">
-          <a href="#" class="home">home</a>
-          <a href="#" class="bookmarks">bookmarks</a>
-          <a href="#" class="profile">profile</a>
+          <a class="link-home link" href="./index.html">
+            <img
+              src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/256/external-home-multimedia-kiranshastry-lineal-kiranshastry.png"
+              alt="home"
+            />
+          </a>
+          <a class="link-bookmarks link" href="#"
+            ><img
+              src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
+              alt="bookmarks"
+          /></a>
+          <a class="link-profile link" href="#"
+            ><img
+              src="https://img.icons8.com/pastel-glyph/256/gender-neutral-user.png"
+              alt="profile"
+          /></a>
         </nav>
       </footer>
     </div>
