--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="wrapper">
+    <section class="wrapper">
       <header class="header">
         <section class="header__container _container">
           <h1 class="header__title title">Quiz App</h1>
@@ -17,21 +17,35 @@
 
       <main class="page">
         <div class="page__container">
-          <section class="page__column">
-            <div class="page__item">
-              <h2 class="page__title title">
-                Lorem ipsum dolor sit amet Lorem ipsum dolor
-              </h2>
-              <button class="page__button button">Show Answer</button>
-              <div class="page__tags tags">
-                <a href="#" class="tags__link">#html</a>
-                <a href="#" class="tags__link">#flexbox</a>
-                <a href="#" class="tags__link">#css</a>
-              </div>
-              <img
-                src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
-                alt=""
-              />
+          <section class="qutz-card">
+            <div class="qutz-card__items">
+              <section class="qutz-card__qustion qustion">
+                <p class="qustion__text">
+                  What proprety flips the axes in flexbox?
+                </p>
+                <button class="qustion__button button">Show answer</button>
+                <ul class="qutz-card__tags tags">
+                  <li class="tags__item"><a href="#">#html</a></li>
+                  <li class="tags__item"><a href="#">#flexbox</a></li>
+                  <li class="tags__item"><a href="#">#css</a></li>
+                </ul>
+                <span class="bookmark"
+                  ><img
+                    src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
+                    alt=""
+                /></span>
+              </section>
+              <section class="qutz-card__answer answer">
+                <p class="answer__text">
+                  What proprety flips the axes in flexbox!
+                </p>
+                <button class="answer__button button">Show question</button>
+                <ul class="qutz-card__tags tags">
+                  <li class="tags__item"><a href="#">#html</a></li>
+                  <li class="tags__item"><a href="#">#flexbox</a></li>
+                  <li class="tags__item"><a href="#">#css</a></li>
+                </ul>
+              </section>
             </div>
           </section>
         </div>
@@ -39,24 +53,37 @@
 
       <footer class="footer">
         <nav class="nav">
-          <a class="link-home link" href="./index.html">
-            <img
-              src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/256/external-home-multimedia-kiranshastry-lineal-kiranshastry.png"
-              alt="home"
-            />
-          </a>
-          <a class="link-bookmarks link" href="#"
-            ><img
-              src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
-              alt="bookmarks"
-          /></a>
-          <a class="link-profile link" href="#"
-            ><img
-              src="https://img.icons8.com/pastel-glyph/256/gender-neutral-user.png"
-              alt="profile"
-          /></a>
+          <ul class="menu">
+            <li>
+              <a class="menu__link-home link" href="/">
+                <img
+                  class="menu__image"
+                  src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/256/external-home-multimedia-kiranshastry-lineal-kiranshastry.png"
+                  alt="home"
+                />
+              </a>
+            </li>
+            <li>
+              <a class="menu__link-bookmarks link" href="./bookmarks.html"
+                ><img
+                  class="menu__image"
+                  src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
+                  alt="bookmarks"
+              /></a>
+            </li>
+            <li>
+              <a class="menu__link-profile link" href="./profile.html">
+                <img
+                  class="menu__image"
+                  src="https://img.icons8.com/pastel-glyph/256/gender-neutral-user.png"
+                  alt="profile"
+                />
+              </a>
+            </li>
+          </ul>
         </nav>
       </footer>
-    </div>
+    </section>
+    <script src="./js/script.js"></script>
   </body>
 </html>
