qutz-app-update-2

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <main class="page">
         <div class="page__container">
           <section class="qutz-card">
-            <div class="qutz-card__items">
+            <section class="qutz-card__items">
               <section class="qutz-card__qustion qustion">
                 <p class="qustion__text">
                   What proprety flips the axes in flexbox?
@@ -46,7 +46,7 @@
                   <li class="tags__item"><a href="#">#css</a></li>
                 </ul>
               </section>
-            </div>
+            </section>
           </section>
         </div>
       </main>
