qutz-app-update-3

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
-    <title>Document</title>
+    <title>Bookmarks</title>
   </head>
   <body>
     <section class="wrapper">
@@ -16,6 +16,37 @@
       </header>
       <main class="bookmark">
         <h1>bookmarks</h1>
+        <section class="qutz-card">
+          <section class="qutz-card__items">
+            <section class="qutz-card__qustion qustion">
+              <p class="qustion__text">
+                What proprety flips the axes in flexbox?
+              </p>
+              <button class="qustion__button button">Show answer</button>
+              <ul class="qutz-card__tags tags">
+                <li class="tags__item"><a href="#">#html</a></li>
+                <li class="tags__item"><a href="#">#flexbox</a></li>
+                <li class="tags__item"><a href="#">#css</a></li>
+              </ul>
+              <span class="bookmark"
+                ><img
+                  src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
+                  alt=""
+              /></span>
+            </section>
+            <section class="qutz-card__answer answer">
+              <p class="answer__text">
+                What proprety flips the axes in flexbox!
+              </p>
+              <button class="answer__button button">Show question</button>
+              <ul class="qutz-card__tags tags">
+                <li class="tags__item"><a href="#">#html</a></li>
+                <li class="tags__item"><a href="#">#flexbox</a></li>
+                <li class="tags__item"><a href="#">#css</a></li>
+              </ul>
+            </section>
+          </section>
+        </section>
       </main>
       <footer class="footer">
         <nav class="nav">
