qutz-app-update-3

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -31,7 +31,7 @@
               <span class="bookmark"
                 ><img
                   src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
-                  alt=""
+                  alt="bookmark icon"
               /></span>
             </section>
             <section class="qutz-card__answer answer">
@@ -56,7 +56,7 @@
                 <img
                   class="menu__image"
                   src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/256/external-home-multimedia-kiranshastry-lineal-kiranshastry.png"
-                  alt="home"
+                  alt="home icon"
                 />
               </a>
             </li>
@@ -65,7 +65,7 @@
                 ><img
                   class="menu__image"
                   src="https://img.icons8.com/external-phatplus-lineal-phatplus/256/external-bookmarks-essential-phatplus-lineal-phatplus.png"
-                  alt="bookmarks"
+                  alt="bookmarks icon"
               /></a>
             </li>
             <li>
@@ -73,7 +73,7 @@
                 <img
                   class="menu__image"
                   src="https://img.icons8.com/pastel-glyph/256/gender-neutral-user.png"
-                  alt="profile"
+                  alt="profile icon"
                 />
               </a>
             </li>
